--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Hello React!</title>
   </head>
+  <link rel="stylesheet" href="./libary.css">
   <body>
     <div id="example"></div>
     <script src="bundle.js"></script>
