update ui components

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello React!</title>
+    <title>Production Analyzing</title>
   </head>
   <link rel="stylesheet" href="./libary.css">
   <body>
-    <div id="example"></div>
+    <div id="main"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
