--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <title>Production Analyzing</title>
   </head>
   <link rel="stylesheet" href="./libary.css">
+  <link rel="stylesheet" href="./c3.css">
+  <link rel="icon" href="https://cdn2.iconfinder.com/data/icons/industry-3/512/automatic_conveyor-512.png">
   <body>
     <div id="main"></div>
     <script src="bundle.js"></script>
