--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="./libary.css">
   <link rel="stylesheet" href="./c3.css">
   <link rel="icon" href="https://cdn2.iconfinder.com/data/icons/industry-3/512/automatic_conveyor-512.png">
+  <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script>
+    var socket = io("http://localhost:3001");
+  </script>
   <body>
     <div id="main"></div>
     <script src="bundle.js"></script>
