change layout for nav

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./bootstrap.css">
   <link rel="stylesheet" href="./machine.css">
   <link rel="stylesheet" href="./c3.css">
-  <link rel="icon" href="https://cdn2.iconfinder.com/data/icons/industry-3/512/automatic_conveyor-512.png">
+  <link rel="icon" href="./browm_logo2.png">
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script>
