--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <link rel="icon" href="./browm_logo2.png">
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script src="//code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+  <script src="./jquery.jrumble.1.3.min.js"></script>
+
   <script>
     var socket = io("http://localhost:3001");
   </script>
